<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="asteroid"
            type="io.raveerocks.asteroidradar.ui.models.Asteroid" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/asteroid_type_image"
            android:layout_width="match_parent"
            android:layout_height="@dimen/image_frame_height"
            android:adjustViewBounds="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:potentiallyHazardousAsteroidDetailed="@{asteroid.potentiallyHazardousAsteroid}"
            android:contentDescription="@string/potentially_hazardous_asteroid_image"
            tools:srcCompat="@drawable/asteroid_safe" />

        <ScrollView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:padding="@dimen/margin_medium"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/asteroid_type_image">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        style="@style/style_item_field_large"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/close_approach_data_title" />

                    <TextView
                        android:id="@+id/close_approach_date"
                        style="@style/style_item_field_small"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@{asteroid.date}"
                        tools:text="2020-02-01" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:orientation="vertical">

                        <TextView
                            style="@style/style_item_field_large"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/absolute_magnitude_title" />

                        <TextView
                            android:id="@+id/absolute_magnitude"
                            style="@style/style_item_field_small"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            app:absoluteMagnitude="@{asteroid.absoluteMagnitude}"
                            tools:text="25.126 au" />
                    </LinearLayout>

                    <ImageView
                        android:id="@+id/help_button"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:contentDescription="@string/astronomical_unit_explanation_button"
                        android:padding="@dimen/padding_medium"
                        app:srcCompat="@drawable/ic_help_circle" />

                </LinearLayout>

                <TextView
                    style="@style/style_item_field_large"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/estimated_diameter_title" />

                <TextView
                    android:id="@+id/estimated_diameter"
                    style="@style/style_item_field_small"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:estimatedDiameter="@{asteroid.estimatedDiameterMax}"
                    tools:text="0.82 km" />

                <TextView
                    style="@style/style_item_field_large"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/relative_velocity_title" />

                <TextView
                    android:id="@+id/relative_velocity"
                    style="@style/style_item_field_small"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:relativeVelocity="@{asteroid.relativeVelocity}"
                    tools:text="11.9 km/s" />

                <TextView
                    style="@style/style_item_field_large"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/distance_from_earth_title" />

                <TextView
                    android:id="@+id/distance_from_earth"
                    style="@style/style_item_field_small"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:missDistance="@{asteroid.missDistance}"
                    tools:text="0.0924 au" />

            </LinearLayout>
        </ScrollView>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>